--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,8 @@
     <title>Lista de tarefas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <div id="container">
