:sparkles: make possible to edit the list title

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <div id="listHeader">
-            <h1>DIONEI</h1>
+            <input type="text" name="headerTitle" id="headerTitle" value="Dionei">
         </div>
 
         <div id="content">
