--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <div id="listHeader">
-            <input type="text" name="headerTitle" id="headerTitle" value="Dionei">
+            <input type="text" name="headerTitle" id="headerTitle" placeholder="Digite um nome para essa lista 😉">
         </div>
 
         <div id="content">
