--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
     <script src="./script.js" defer></script>
 </head>
 <body>
