:bug: removed chechked to close the menu

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -44,7 +44,7 @@
 
         </div>
         
-        <input type="checkbox" name="btnOpenMenu" id="btnOpenMenu" checked>
+        <input type="checkbox" name="btnOpenMenu" id="btnOpenMenu">
         <div id="menu">
 
             <div id="lists">
